--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     font-family: "Roboto";
-    padding: 30px 10% 0 10%;
+    padding: 30px 104px 0 104px;
     display: flex;
     justify-content: space-between;
 }
