--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,9 @@
 .header {
     all: unset;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5%;
+    padding: 0 104px;
     height: 80px;
     color: #ffffff;
     border-bottom: 1px #ffffff solid;
@@ -66,6 +65,12 @@
 }
 .header__burger {
     display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .header {
+        padding: 0 40px;
+    }
 }
 
 @media screen and (max-width: 720px) {
