--- a/src/components/NewsCardsList/NewsCardsList.css
+++ b/src/components/NewsCardsList/NewsCardsList.css
@@ -2,7 +2,7 @@
     padding-bottom: 80px;
     display: flex;
     flex-direction: column;
-    padding: 5%;
+    padding: 5% 104px;
     background: #f5f6f7;
     align-items: center;
 }
